--- a/abrartest.yml
+++ b/abrartest.yml
@@ -4,5 +4,5 @@
   tasks:
     - name: Create a file called '/tmp/testfile.txt' with the content 'hello world'.
     copy:
-      src: ./files/testfile.txt
+      src: /files/testfile.txt
       dest: /tmp/testfile.txt
