--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,25 +1,18 @@
 
 version: 0.2
-install:
-    runtime-versions:
-      java: corretto11
-files:
-  - source: /
-    destination: /var/www/html
-    overwrite: true
-    #phases:
-#  install:
- #   runtime-versions:
-  #    java: corretto11
+
+ install:
+  runtime-versions:
+     java: corretto11
       
-  #pre_build:
-  #  commands:
-  #    - echo Nothing to do in the pre_build phase...
-  #build:
-  #  commands:
-  #    - echo Build started on `date`
+ pre_build:
+   commands:
+      - echo Nothing to do in the pre_build phase...
+  build:
+    commands:
+      - echo Build started on `date`
       
-  #post_build:
-  #  commands:
-  #    - echo Build completed on `date`
+  post_build:
+    commands:
+      - echo Build completed on `date`
 
